--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#about">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="http://127.0.0.1:56131/pages/excercises.html#">Excercises</a>
+                <a class="nav-link" href="pages/excercises.html#">Excercises</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -61,9 +61,9 @@
           </div>
         </nav>
 
-        <section id="home" class="hero">
+        <section id="home">
           <div class="container">
-            <div class="row content">
+            <div class="row page-title">
               <div class="col-12">
                 <header>
                   <h6>My Journey From</h6>
@@ -74,10 +74,6 @@
               <div class="col-12">
                 <img src="img/code-hero.svg" class="img-fluid"/>
               </div>
-
-              <!--<div class="col-12 animated infinite bounce arrow">
-                <span class="lnr lnr-arrow-down"></span>
-              </div>-->
             </div>
           </div>
         </section>
