--- a/index.html
+++ b/index.html
@@ -45,8 +45,15 @@
                   Excercises
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">HTML/CSS</a>
-                  <a class="dropdown-item" href="#">JavaScript</a>
+                  <p class="dropdown-item"><i class="fas fa-code"></i> Frontend</p>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="pages/html_css.html">HTML/CSS</a>
+                  <a class="dropdown-item" href="pages/javascript.html">JavaScript</a>
+                  <div class="dropdown-divider"></div>
+                  <a href="../pages/backend.html" class="dropdown-item"><i class="fas fa-terminal"></i> Backend</p>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Something</a>
+                  <a class="dropdown-item" href="#">Something</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
