--- a/pages/javascript.html
+++ b/pages/javascript.html
@@ -45,8 +45,15 @@
                   Excercises
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">HTML/CSS</a>
-                  <a class="dropdown-item" href="#">JavaScript</a>
+                  <p class="dropdown-item"><i class="fas fa-code"></i> Frontend</p>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="html_css.html">HTML/CSS</a>
+                  <a class="dropdown-item" href="javascript.html">JavaScript</a>
+                  <div class="dropdown-divider"></div>
+                  <a href="../pages/backend.html" class="dropdown-item"><i class="fas fa-terminal"></i> Backend</p>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Something</a>
+                  <a class="dropdown-item" href="#">Something</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
@@ -72,39 +79,18 @@
             <div class="col-12 main-page">
               <section class="main page-title">
                 <header>
-                  <h6>Frontend</h6>
+                  <h6>Backend</h6>
                   <div class="underline"></div>
                   <h1>Excercises</h1>
                 </header>
                 <div class="col-12">
-                  <img src="../img/excercises-hero.svg" class="img-fluid"/>
+                  <img src="../img/javascript-hero.svg" class="img-fluid"/>
                 </div>
               </section><!-- End Page Hero -->
             </div>
           </div>
 
-          <div class="row landing-row">
-            <div class="col-12">
-              <header>
-                <h6>HTML/CSS</h6>
-                <div class="underline left"></div>
-                <h1>Landing Page</h1>
-              </header>
-            </div>
-            <div class="col-12">
-              <section id="landing-page" class="landing-hero">
-                <div class="row justify-content-center">
-                  <div class="col-12 content">
-                    <h2>Creative Designs</h2>
-                    <h6>
-                      Building better experiences one design at a time
-                    </h6>
-                    <button type="button" class="btn btn-outline-light my-btn">Find out more</button>
-                  </div>
-                </div>
-              </section><!-- Landing Page -->
-            </div>
-          </div>
+
         </div>
 
 
