add third excercise

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   <a class="dropdown-item" href="pages/html_css.html">HTML/CSS</a>
                   <a class="dropdown-item" href="pages/javascript.html">JavaScript</a>
                   <div class="dropdown-divider"></div>
-                  <a href="../pages/backend.html" class="dropdown-item"><i class="fas fa-terminal"></i> Backend</p>
+                  <p class="dropdown-item"><i class="fas fa-terminal"></i> Backend</p>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="#">Something</a>
                   <a class="dropdown-item" href="#">Something</a>
