--- a/pages/html_css.html
+++ b/pages/html_css.html
@@ -50,7 +50,7 @@
                   <a class="dropdown-item" href="html_css.html">HTML/CSS</a>
                   <a class="dropdown-item" href="javascript.html">JavaScript</a>
                   <div class="dropdown-divider"></div>
-                  <a href="../pages/backend.html" class="dropdown-item"><i class="fas fa-terminal"></i> Backend</p>
+                  <p class="dropdown-item"><i class="fas fa-terminal"></i> Backend</p>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="#">Something</a>
                   <a class="dropdown-item" href="#">Something</a>
@@ -74,13 +74,13 @@
           </div>
         </nav>
 
-        <section id="frontend-home">
+        <section id="html-css-home">
           <div class="container">
             <div class="row">
               <div class="col-12 main-page">
                 <section class="main page-title">
                   <header>
-                    <h6>Frontend</h6>
+                    <h6>HTML/CSS</h6>
                     <div class="underline"></div>
                     <h1>Excercises</h1>
                   </header>
@@ -174,12 +174,12 @@
 
 
 
-        <script src="js/vendor/modernizr-3.5.0.min.js"></script>
+        <script src="../js/vendor/modernizr-3.5.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script src="../js/plugins.js"></script>
+        <script src="../js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <script>
