add loop exercises

--- a/pages/html_css.html
+++ b/pages/html_css.html
@@ -41,8 +41,8 @@
                 <a class="nav-link" href="#about">About</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#excercises.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Excercises
+                <a class="nav-link dropdown-toggle" href="#exercises.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  exercises
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <p class="dropdown-item"><i class="fas fa-code"></i> Frontend</p>
@@ -82,7 +82,7 @@
                   <header>
                     <h6>HTML/CSS</h6>
                     <div class="underline"></div>
-                    <h1>Excercises</h1>
+                    <h1>exercises</h1>
                   </header>
                   <div class="col-12">
                     <img src="../img/frontend-hero.svg" class="img-fluid"/>
@@ -94,9 +94,9 @@
         </section>
 
 
-        <section id="excercise-landing">
+        <section id="exercise-landing">
           <div class="container">
-            <div class="row excercises-row">
+            <div class="row exercises-row">
               <div class="col-12 text-center">
                 <header id="html/css">
                   <h6>HTML/CSS</h6>
@@ -104,7 +104,7 @@
                   <h1>landing page</h1>
                 </header>
                 <p>
-                  This excercise was to create a simple hero section for a landing page.
+                  This exercise was to create a simple hero section for a landing page.
                 </p>
               </div>
               <div class="col-12">
@@ -118,7 +118,7 @@
                       <button type="button" class="btn btn-outline-light my-btn">Find out more</button>
                     </div>
                   </div>
-                </section><!-- Excercises Landing Page -->
+                </section><!-- exercises Landing Page -->
               </div>
             </div>
           </div>
@@ -128,7 +128,7 @@
 
         <section id="robot">
           <div class="container">
-            <div class="row excercises-row align-items-center">
+            <div class="row exercises-row align-items-center">
               <div class="col-12 text-center">
                 <header>
                   <h6>HTML/CSS</h6>
@@ -136,7 +136,7 @@
                   <h1>robot buddy</h1>
                 </header>
                 <p>
-                  Although he is not mobile ready, this little buddy was a simple excercise to help learn about CSS3 and CSS art. Hover over his head, legs and arms...
+                  Although he is not mobile ready, this little buddy was a simple exercise to help learn about CSS3 and CSS art. Hover over his head, legs and arms...
                 </p>
               </div>
 
