--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <a class="nav-link" href="#about">About</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#excercises.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Excercises
+                <a class="nav-link dropdown-toggle" href="#exercises.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  exercises
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <p class="dropdown-item"><i class="fas fa-code"></i> Frontend</p>
